@@ -2,11 +2,13 @@ package crypto.cipher.cbehavior;
 
 import com.sun.xml.internal.messaging.saaj.packaging.mime.util.BASE64DecoderStream;
 import com.sun.xml.internal.messaging.saaj.packaging.mime.util.BASE64EncoderStream;
+import org.apache.log4j.Logger;
 
-import javax.crypto.BadPaddingException;
-import javax.crypto.Cipher;
-import javax.crypto.IllegalBlockSizeException;
-import javax.crypto.NoSuchPaddingException;
+import java.security.spec.InvalidKeySpecException;
+import java.security.spec.X509EncodedKeySpec;
+import java.util.Base64;
+
+import javax.crypto.*;
 import javax.crypto.spec.IvParameterSpec;
 import javax.crypto.spec.SecretKeySpec;
 import java.io.UnsupportedEncodingException;
@@ -15,39 +17,34 @@ import java.security.*;
 /**
  * This class defines the behavior of the encryption technique known as the Advanced Encryption Standard (AES).
  *
- * @author Wolfgang Mair
+ * @author Wolfgang Mair, Christian Janeczek
  * @version 27.01.2015
  */
 public class AESBehavior implements CipherBehavior {
 
+    Logger logger = org.apache.log4j.Logger.getLogger(AESBehavior.class);
     private String IV = "AAAAAAAAAAAAAAAA";
+    private static AESBehavior instance = new AESBehavior();
 
     /**
      * AES happens
      */
-    public String encryptString(String text, String key) {
+    public String encryptString(String text, Key key, String algorithm) {
 
         try {
 
-            Cipher cipher = Cipher.getInstance("AES/CBC/NoPadding", "SunJCE");
-            SecretKeySpec secretKey = new SecretKeySpec(key.getBytes("UTF-8"), "AES");
-            cipher.init(Cipher.ENCRYPT_MODE, secretKey, new IvParameterSpec(IV.getBytes("UTF-8")));
-            byte[] enc = cipher.doFinal(text.getBytes("UTF-8"));
-            return new String(BASE64EncoderStream.encode(enc));
+            Cipher cipher = Cipher.getInstance(algorithm);
+            cipher.init(Cipher.ENCRYPT_MODE, key);
+            byte[] enc = cipher.doFinal(text.getBytes());
+            return Base64.getEncoder().encodeToString(enc);
 
         } catch (NoSuchAlgorithmException e) {
-            e.printStackTrace();
-        } catch (InvalidAlgorithmParameterException e) {
-            e.printStackTrace();
-        } catch (UnsupportedEncodingException e) {
             e.printStackTrace();
         } catch (NoSuchPaddingException e) {
             e.printStackTrace();
         } catch (BadPaddingException e) {
             e.printStackTrace();
         } catch (IllegalBlockSizeException e) {
-            e.printStackTrace();
-        } catch (NoSuchProviderException e) {
             e.printStackTrace();
         } catch (InvalidKeyException e) {
             e.printStackTrace();
@@ -58,28 +55,21 @@ public class AESBehavior implements CipherBehavior {
     /**
      * AES happens
      */
-    public String decryptString(String text, String key) {
+    public String decryptString(String text, Key key, String algorithm) {
         try {
 
-            Cipher cipher = Cipher.getInstance("AES/CBC/NoPadding", "SunJCE");
-            SecretKeySpec secretKey = new SecretKeySpec(key.getBytes("UTF-8"), "AES");
-            cipher.init(Cipher.DECRYPT_MODE, secretKey, new IvParameterSpec(IV.getBytes("UTF-8")));
-            byte[] dec = BASE64DecoderStream.decode(text.getBytes());
-            return new String(cipher.doFinal(dec), "UTF-8");
+            Cipher cipher = Cipher.getInstance(algorithm);
+            cipher.init(Cipher.DECRYPT_MODE, key);
+            byte[] dec = Base64.getDecoder().decode(text);
+            return new String(cipher.doFinal(dec));
 
         } catch (NoSuchAlgorithmException e) {
-            e.printStackTrace();
-        } catch (NoSuchProviderException e) {
             e.printStackTrace();
         } catch (NoSuchPaddingException e) {
             e.printStackTrace();
         } catch (BadPaddingException e) {
             e.printStackTrace();
         } catch (IllegalBlockSizeException e) {
-            e.printStackTrace();
-        } catch (UnsupportedEncodingException e) {
-            e.printStackTrace();
-        } catch (InvalidAlgorithmParameterException e) {
             e.printStackTrace();
         } catch (InvalidKeyException e) {
             e.printStackTrace();
@@ -90,15 +80,104 @@ public class AESBehavior implements CipherBehavior {
     /**
      * AES Key-generation
      */
-    public KeyPair generateKey() {
+    public Key generateKey(String algorithm) {
         try {
-            KeyPairGenerator kpg = KeyPairGenerator.getInstance("RSA");
-            kpg.initialize(2048);
-            return kpg.genKeyPair();
+            return KeyGenerator.getInstance(algorithm).generateKey();
         } catch (NoSuchAlgorithmException e) {
-            e.printStackTrace();
+            logger.info("The algorithm known as AES could not be found!");
+        }
+        return null;
+    }
+    /**
+     * Generates a symmetric key (AES for example)
+     *
+     * @param alg
+     *            the Algorithm
+     * @return the Key
+     */
+    public Key genKey(String alg) {
+        try {
+            return KeyGenerator.getInstance(alg).generateKey();
+        } catch (NoSuchAlgorithmException e) {
+
         }
         return null;
     }
 
+    /**
+     * Encodes the Public key to B64
+     *
+     * @param pubk
+     *            the key
+     * @return the encoded Key as String
+     */
+    public String encodePubK(PublicKey pubk) {
+        KeyFactory fact = null;
+        try {
+            fact = KeyFactory.getInstance("RSA");
+        } catch (NoSuchAlgorithmException e) {
+            // TODO Auto-generated catch block
+            e.printStackTrace();
+        }
+
+        X509EncodedKeySpec spec = null;
+        try {
+            spec = fact.getKeySpec(pubk, X509EncodedKeySpec.class);
+        } catch (InvalidKeySpecException e) {
+            // TODO Auto-generated catch block
+            e.printStackTrace();
+        }
+        return Base64.getEncoder().encodeToString(spec.getEncoded());
+    }
+
+    /**
+     * Decodes the B64 Public key
+     *
+     * @param pubk
+     *            the key as String
+     * @return the decoded String/Key
+     */
+    public PublicKey decodePubK(String pk) {
+        byte[] keyBytes = null;
+        try {
+            keyBytes = Base64.getDecoder().decode(pk.getBytes("utf-8"));
+        } catch (UnsupportedEncodingException e1) {
+
+        }
+
+        X509EncodedKeySpec spec = new X509EncodedKeySpec(keyBytes);
+        KeyFactory keyFactory = null;
+
+        try {
+            keyFactory = KeyFactory.getInstance("RSA");
+        } catch (NoSuchAlgorithmException e1) {
+
+        }
+
+        try {
+            return keyFactory.generatePublic(spec);
+        } catch (InvalidKeySpecException e) {
+
+        }
+
+        return null;
+    }
+    public static AESBehavior get(){
+        return instance;
+    }
+
+    @Override
+    public String encryptString(String text, Key key) {
+        return null;
+    }
+
+    @Override
+    public String decryptString(String text, Key key) {
+        return null;
+    }
+
+    @Override
+    public Key generateKey() {
+        return null;
+    }
 }
